--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 	 				</div>
 	 			</div>
 	 			<div class="control-group">
+	 				<label for="up_passwort2" class="control-label">Passwort wiederholen</label>
+	 				<div class="controls">
+	 					<input name="up_passwort2" id="up_passwort2" type="password" value="******" required minlength="6" maxlength="20" rel="up_passwort" data-invalid="Keine Übereinstimmung! Bitte wiederholen Sie das Passwort.">
+	 				</div>
+	 			</div>
+	 			<div class="control-group">
 	 				<label for="up_checkbox" class="control-label">Checkbox</label>
 	 				<div class="controls">
 	 					<input name="up_checkbox" id="up_checkbox" type="checkbox" value="1" required data-required="Check all checkboxes!" checked="checked">
