Added bootstrap images

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<title>HTML(5) Form Validator</title>
 	<style type="text/css">
 		@import "css/bootstrap.css";
 	</style>
