--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
 	 					</select>
 	 				</div>
 	 			</div>
+	 			<div class="control-group">
+	 				<label for="up_textarea" class="control-label">Textarea</label>
+	 				<div class="controls">
+	 					<textarea name="up_textarea" required>Text</textarea>
+	 				</div>
+	 			</div>
 	 			<div class="form-actions">
 	 				<input class="btn btn-primary btn-right" type="submit" value="Anmelden">
 	 			</div>
